--- a/index.html
+++ b/index.html
@@ -34,22 +34,30 @@
         </div>
 
         <div class="main-container">
-            <div class="daily">
+
+            <p>Daily Expenditure</p>
             <input type="" name="">
+
+            <div id="daily">
                 <ul>
                     <li>item1</li>
                     <li>item2</li>
                     <li>item3</li>
                 </ul>
             </div>
-            <div class="monthly">
+
+            <p>Monthly Expenditure</p>
+
+            <div id="monthly">
+
                 <ul>
                     <li>item1</li>
                     <li>item2</li>
                     <li>item3</li>
                 </ul>
+
             </div>
-            <div class="summary">
+            <div id="summary">
                 <p>Monthly, daily...</p>
             </div>
 
