add basic event listener for day and month selection

--- a/index.html
+++ b/index.html
@@ -40,14 +40,10 @@
               </div>
             </nav>
 
-
-<select id="selectMonth">
-
-</select>
-
-<select id="selectDay">
-
-</select>
+            <div>
+                <span id="selectMonth"></span>
+                <span id="selectDay"></span>
+            </div>
 
             <p>Daily Expenditure</p>
             <input type="" placeholder="name" name="name" >
