--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/animate.css">
         <link rel="stylesheet" href="css/main.css">
 
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <script src="src/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -62,7 +62,6 @@
             </div> <!-- #main -->
         </div> <!-- #main-container -->
 
-        <script src="database/personOne.js"></script>
-        <script src="js/main.js"></script>
+        <script src="dist/build.js"></script>
     </body>
 </html>
